# gradio_macro

./: .gitignore  Cargo.toml  SOUND_GENERATOR_INVESTIGATION.md  readme.md  task.md  whisper_result.txt
.github/workflows/: publish.yml
.gradio_cache/: hf-audio%2Fwhisper-large-v3-turbo.json  jacoblincool%2Fvocal-separation.json  jacoblincool_vocal-separation.json  k2-fsa_OmniVoice.json
examples/: omnivoice.rs  sound_generator.rs  vocal.rs  whisper.rs  whisper_cli.rs
src/: api_macro.rs  cache.rs  cli_macro.rs  codegen.rs  lib.rs
