[package]
name = "gradio_macro"
description = "A macro for generating Gradio interfaces."
version = "0.4.0"
authors = ["Deniz Sincar <deniz@r1oaz.ru>"]
edition = "2021"
repository = "https://github.com/denizsincar29/gradio_macro"
readme = "readme.md"
license = "MIT"
keywords = ["gradio", "macro", "ai", "huggingface"]
exclude = ["wavs/"]

[dependencies]
anyhow = "1.0.86"
clap = { version = "4", features = ["derive", "env"], optional = true }
gradio = "0.3.2"
heck = "0.5.0"
regex = { version = "1", optional = true }
proc-macro2 = "1.0"
quote = "1.0.37"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
syn = "2.0.76"
tokio = { version = "1", features = ["full"], optional = true }

[features]
default = []
update_cache = []
# Enable to build the `gradio_cache_update` binary.
cli-tools = ["clap", "tokio", "regex"]

[dev-dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.86"

[lib]
proc-macro = true

[[bin]]
name = "gradio_cache_update"
path = "src/bin/gradio_cache_update.rs"
required-features = ["cli-tools"]

