[package]
name = "gradio_macro"
description = "A macro for generating Gradio interfaces."
version = "0.6.0"
authors = ["Deniz Sincar <deniz@r1oaz.ru>"]
edition = "2021"
repository = "https://github.com/denizsincar29/gradio_macro"
readme = "readme.md"
license = "MIT"
keywords = ["gradio", "macro", "ai", "huggingface"]
exclude = ["wavs/"]

[dependencies]
gradio = "0.3.2"
heck = "0.5.0"
proc-macro2 = "1.0"
quote = "1.0.37"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = "2.0"
# Used in the short-timeout cache-miss fetch to enforce the deadline at the
# async level so the spawned thread cannot outlive the timeout.
tokio = { version = "1", features = ["rt", "time"] }

[features]
default = []
# Fetch fresh API specs from the network and update the local cache.
# Use when the cache is missing or outdated:
#   cargo build --features gradio_macro/update_cache
update_cache = []

[dev-dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"

[lib]
proc-macro = true

